--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -13,6 +13,7 @@
     <h2>Flixnet</h2>
     <a href="">Home</a>
     {% if user.is_authenticated %}
+      <a href="{% url 'userprofile' user.id %}">Profile</a>
       <a href="{% url 'logout' %}">Log Out</a>
     {% else %}
       <a href="{% url 'login' %}">Log In</a>
