--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -11,7 +11,8 @@
 <body>
   <nav>
     <h2>Flixnet</h2>
-    <a href="">Home</a>
+    <a href="{% url 'home' %}">Home</a>
+    <a href="{% url 'search' %}">Search Movies</a>
     {% if user.is_authenticated %}
       <a href="{% url 'userprofile' user.id %}">Profile</a>
       <a href="{% url 'logout' %}">Log Out</a>
