--- a/main_app/templates/movies/search.html
+++ b/main_app/templates/movies/search.html
@@ -5,12 +5,11 @@
     <input type="text" name="search">
     <input type="submit" name="submit" value="SearchXYZ">
   </form>
-  <p>{{movies.length}}</p>
-  {% if movies.length %}
+  {% if movies %}
     {% for movie in movies %}
       <p>{{movie.original_title}}</p>
       <p>{{movie.id}}</p>
-      <p>{{movie.poster_path}}</p>
+      <img src="{{image_url}}{{movie.poster_path}}" alt="">
     {% endfor %}
   {% endif %}
 {% endblock %}
