--- a/main_app/templates/movies/detail.html
+++ b/main_app/templates/movies/detail.html
@@ -5,6 +5,12 @@
   <img src="{{image_url}}{{movie.backdrop_path}}" alt="">
   <img src="{{image_url}}{{movie.poster_path}}" alt="">
   {% for person in credits %}
-    <p>{{ person.name }}</p>
+    <span>{{ person.name }} ||</span>
   {% endfor %}
+  <form action="{% url 'add_to_cart' %}" method="POST">
+    {% csrf_token %}
+    <input type="hidden" value="{{movie.id}}" name="movie_id">
+    <input type="hidden" value="{{movie.original_title}}" name="movie_name">
+    <button type="submit" value="Add To Cart">Add To Cart</button>
+  </form>
 {% endblock %}
