redirect user to create an address if they add a movie to cart with no address

--- a/main_app/templates/cart/checkout.html
+++ b/main_app/templates/cart/checkout.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 <h1>Checkout</h1>
-<form action="{% url 'confirm_order' current_order.id %}">
+<form action="{% url 'confirm_order' current_order.id %}" method="POST">
+  {% csrf_token %}
   <h4>Select Shipping Address</h4>
   <select name="shipping_address">
     {% for address in addresses %}
