--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -5,16 +5,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="">
-  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+  <title>Flixnet</title>
 </head>
-<body>
-  <nav>
+<body class="tbd-bg-primary tbd-text-primary">
+  <nav class="tbd-bg-secondary">
     <h2>Flixnet</h2>
     <a href="{% url 'home' %}">Home</a>
     <a href="{% url 'search' %}">Search Movies</a>
     {% if user.is_authenticated %}
       <a href="{% url 'userprofile' user.id %}">Profile</a>
+      <a href="{% url 'user_orders' user.id %}">Order History</a>
       <a href="{% url 'cart'%}">Cart</a>
       <a href="{% url 'logout' %}">Log Out</a>
     {% else %}
@@ -22,9 +24,10 @@
       <a href="{% url 'signup' %}">Sign Up</a>
     {% endif %}
   </nav>
-  <main>
+  <main class="container p-4">
     {% block content%}
     {% endblock %}
   </main>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
