--- a/main_app/templates/movies/detail.html
+++ b/main_app/templates/movies/detail.html
@@ -1,18 +1,58 @@
 {% extends 'base.html' %}
 {% block content %}
-  <h1>movie details</h1>
-  <h1>{{ movie.original_title }}</h1>
-  <img src="{{image_url}}{{movie.backdrop_path}}" alt="">
-  <img src="{{image_url}}{{movie.poster_path}}" alt="">
-  {% for person in credits %}
-    <span>{{ person.name }} ||</span>
-  {% endfor %}
-  {% if user.is_authenticated %}
-  <form action="{% url 'add_to_cart' %}" method="POST">
-    {% csrf_token %}
-    <input type="hidden" value="{{movie.id}}" name="movie_id">
-    <input type="hidden" value="{{movie.original_title}}" name="movie_name">
-    <button type="submit" value="Add To Cart">Add To Cart</button>
-  </form>
-  {% endif %}
+  <!-- <img src="{{image_url}}{{movie.backdrop_path}}" alt=""> -->
+  <div class="row justify-content-center">
+    <div class="col-sm-3 p-2 justify-content-center d-flex flex-column">
+      <div class="card bg-transparent">
+        <img class="rounded" src="{{image_url}}{{movie.poster_path}}" alt="">
+      </div>
+      <div>
+        {% if user.is_authenticated %}
+        <form class="text-center" action="{% url 'add_to_cart' %}" method="POST">
+          {% csrf_token %}
+          <input type="hidden" value="{{movie.id}}" name="movie_id">
+          <input type="hidden" value="{{movie.original_title}}" name="movie_name">
+          <button class="btn tbd-company-primary" type="submit" value="Add To Cart">Add To Cart</button>
+        </form>
+        {% endif %}
+        <br>
+        <h4 class="text-center">{{movie.original_title}}</h4>
+        <div class="d-flex justify-content-between">
+          <p class="text-center">{{ movie.release_date}}</p>
+          <p class="text-center">{{certification}}</p>
+          <p class="text-center">{{movie.runtime}} mins</p>
+        </div>
+        <div class="d-flex justify-content-between">
+          <p class="text-center"> Votes - {{movie.vote_count}}</p>
+          <p class="text-center">{{movie.vote_average}}/10</p>
+        </div>
+      </div>
+    </div>
+    <div>
+      <h4>Plot Summary</h4>
+      <p>{{movie.overview}}</p>
+    </div>
+    <div class="cast">
+      <h4>Cast</h4>
+      {% for person in credits %}
+      <span>{{ person.name }}</span>
+    {% endfor %}
+    </div>
+    <div class="genre">
+      <h4>Genre</h4>
+      {% for genre in movie.genres %}
+      <span class="badge rounded-pill  tbd-company-primary mb-2">{{genre.name}}</span>
+      {% endfor %}
+    </div>
+  </div>
+  
+ 
+  <!-- {% if user.is_authenticated %}
+    <form action="{% url 'add_to_cart' %}" method="POST">
+      {% csrf_token %}
+      <input type="hidden" value="{{movie.id}}" name="movie_id">
+      <input type="hidden" value="{{movie.original_title}}" name="movie_name">
+      <button type="submit" value="Add To Cart">Add To Cart</button>
+    </form>
+  {% endif %} -->
 {% endblock %}
