--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -25,7 +25,7 @@
       <a href="{% url 'signup' %}">Sign Up</a>
     {% endif %}
   </nav>
-  <main class="container p-4">
+  <main class="container p-0 pt-2">
     {% block content%}
     {% endblock %}
   </main>
