add homepage searchpage and navbar styling

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -1,7 +1,4 @@
-/* .test {
-  background-color: blue;
-  color: red;
-} */
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;400;700&display=swap');
 
 :root {
   --tbd-bg-main: #222831;
@@ -9,6 +6,31 @@
   --tbd-primary: #DB5C5D;
   --tbd-main-text: #FFFFFF;
   --tbd-transparent: rgba(255,255,255, 0.3);
+}
+
+* {
+  font-family: 'Lexend Deca', sans-serif;
+}
+
+p {
+  line-height: 1.8rem;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  color: inherit;
+}
+
+a:visited {
+  color: inherit;
 }
 
 .tbd-text-danger {
@@ -32,8 +54,13 @@
   color: var(--tbd-main-text);
 }
 
+.tbd-text-company {
+  color: var(--tbd-primary);
+  letter-spacing: .2rem;
+}
+
 .tbd-primary-underline {
-  border-bottom: 4px solid var(--tbd-primary) ;
+  border-bottom: 6px solid var(--tbd-primary) ;
 }
 
 .tbd-flex {
