--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
   {% for genre in genres %}
-  <div class="row">
+  <div class="row mb-3">
     <div class="d-flex mb-3 p-0">
       <h1 class="tbd-primary-underline">
       {{ genre.name }}
