--- a/main_app/templates/movies/detail.html
+++ b/main_app/templates/movies/detail.html
@@ -2,7 +2,7 @@
 {% block content %}
   <!-- <img src="{{image_url}}{{movie.backdrop_path}}" alt=""> -->
   <div class="row justify-content-center">
-    <div class="col-sm-3 p-2 justify-content-center d-flex flex-column">
+    <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10 p-2 justify-content-center d-flex flex-column">
       <div class="card bg-transparent">
         <img class="rounded" src="{{image_url}}{{movie.poster_path}}" alt="">
       </div>
@@ -22,26 +22,38 @@
           <p class="text-center">{{certification}}</p>
           <p class="text-center">{{movie.runtime}} mins</p>
         </div>
-        <div class="d-flex justify-content-between">
-          <p class="text-center"> Votes - {{movie.vote_count}}</p>
-          <p class="text-center">{{movie.vote_average}}/10</p>
+        <div class="d-flex justify-content-center">
+          <p class="text-center me-4"> Votes - {{movie.vote_count}}</p>
+          <p class="text-center">Rating {{movie.vote_average}}/10</p>
         </div>
       </div>
     </div>
     <div>
-      <h4>Plot Summary</h4>
+      <div class="d-flex mb-3 p-0">
+        <h2 class="tbd-primary-underline">
+          Plot Summary
+        </h2>
+      </div>
       <p>{{movie.overview}}</p>
     </div>
-    <div class="cast">
-      <h4>Cast</h4>
+    <div class="cast mb-3">
+      <div class="d-flex mb-3 p-0">
+        <h2 class="tbd-primary-underline">
+          Cast
+        </h2>
+      </div>
       {% for person in credits %}
       <span>{{ person.name }}</span>
     {% endfor %}
     </div>
     <div class="genre">
-      <h4>Genre</h4>
+      <div class="d-flex mb-3 p-0">
+        <h2 class="tbd-primary-underline">
+          Genres
+        </h2>
+      </div>
       {% for genre in movie.genres %}
-      <span class="badge rounded-pill  tbd-company-primary mb-2">{{genre.name}}</span>
+      <span class="font-monospace badge rounded-pill tbd-company-primary mb-2">{{genre.name}}</span>
       {% endfor %}
     </div>
   </div>
