--- a/main_app/templates/main_app/shippingaddress_form.html
+++ b/main_app/templates/main_app/shippingaddress_form.html
@@ -2,14 +2,18 @@
 
 {% block content %}
 {% if object %}
-  <h1>Edit Address</h1>
+<div class="d-flex mb-3 p-0">
+  <h1 class="tbd-primary-underline">Edit Address</h1>
+</div>
 {% else %}
-  <h1>Add Address</h1>
+<div class="d-flex mb-3 p-0">
+  <h1 class="tbd-primary-underline">Add Address</h1>
+</div>
 {% endif %}
 
 <form action="" method="POST">
   {% csrf_token %}
   {{ form.as_p }}
-  <input type="submit" value="Submit!">
+  <input class="btn tbd-company-primary" type="submit" value="Submit!">
 </form>
 {% endblock %}
