--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -1,14 +1,18 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Sign Up</h1>
+<div class="d-flex mb-3 p-0">
+  <h1 class="tbd-primary-underline">
+    Sign Up
+  </h1>
+</div>
 
 <p class="red-text">{{ error_message }}</p>
 
 <form method="POST" action="{% url 'signup' %}">
   {% csrf_token %}
   {{ form.as_p }}
-  <input type="submit" class="btn" value="signup">
+  <input type="submit" class="btn tbd-company-primary" value="Sign Up">
 </form>
 
 {% endblock %}
