minor styling changes across the app

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -103,3 +103,7 @@ img {
   color: white;
   background-color: var(--tbd-bg-secondary);
 }
+
+.form-select {
+  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'><path fill='none' stroke='%23FFF' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/></svg>");
+}
