--- a/main_app/templates/cart/checkout.html
+++ b/main_app/templates/cart/checkout.html
@@ -8,7 +8,7 @@
   {% csrf_token %}
   <h4 class="mt-4 mb-4">Select Shipping Address</h4>
   <div class="row  gap-3">
-    <div class="col-4">
+    <div class="col-12">
       <select class="form-select tbd-bg-secondary text-white" name="shipping_address">
         {% for address in addresses %}
         <option value="{{ address }}">{{ address }}</option>
@@ -19,7 +19,7 @@
 
   <h4 class="mt-4 mb-4">Select Billing Address</h4>
   <div class="row gap-3">
-    <div class="col-4">
+    <div class="col-12">
       <select class="form-select tbd-bg-secondary text-white" name="shipping_address">
         {% for address in addresses %}
         <option value="{{ address }}">{{ address }}</option>
@@ -28,26 +28,26 @@
     </div>
   </div>
   <h4 class="mt-4 mb-4">Credit Card Details</h4>
-  <div class="row  gap-3">
-    <div class="col-4">
+  <div class="row">
+    <div class="col-12 col-lg-6 col-md-6 mb-3">
       <input class="form-control tbd-bg-secondary" type="text" placeholder="First Name">
     </div>
-    <div class="col-4">
+    <div class="col-12 col-lg-6 col-md-6 mb-3">
       <input class="form-control tbd-bg-secondary" type="text" placeholder="Last Name">
     </div>
-    <div class="col-4">
+    <div class="col-12 col-lg-6 col-md-6 mb-3">
       <input class="form-control tbd-bg-secondary" type="number" placeholder="1234 5678 0987 6543">
     </div>
-    <div class="col-4">
+    <div class="col-12 col-lg-6 col-md-6 mb-3">
       <input class="form-control tbd-bg-secondary" type="text" placeholder="CVV">
     </div>
-    <div class="col-4">
+    <div class="col-12 col-lg-6 col-md-6 mb-3">
       <input class="form-control tbd-bg-secondary" type="text" placeholder="MM/DD">
     </div>
-    <div class="col-4">
+    <div class="col-12 col-lg-6 col-md-6 mb-3">
       <input class="form-control tbd-bg-secondary" type="text" placeholder="ZipCode">
     </div>
-    <div class="col-4">
+    <div class="col-12 col-lg-6 col-md-6 mb-3">
       <button class="btn tbd-company-primary" type="submit">Purchase</button>
     </div>
 </form>
